--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+.python-version
 *.py[cod]
 *$py.class
 .DS_Store
@@ -10,6 +11,11 @@ bgai/endgame/gnubg
 mlruns
 logs
 checkpoints
+data/
+rust/bearoff/target
+prometheus-3.8*
+bgai/endgame/gnubg*
+
 
 # C extensions
 *.so
