Unify cluster scripts, local Prometheus, and worker identity
- Replace redundant start/reset scripts with minimal set: head_start, worker_start, grafana_setup, prometheus_setup, stop_all, status.
- Switch to project-local Prometheus binary under tools/, ignore binaries/data in .gitignore, and update scrape config.
- Move Prometheus file_sd discovery JSON into tools/ for reliability; add env override.
- Pre-initialize eval metrics and widen Grafana queries to show sparse eval data.
- Refresh worker identity (hostname/device/port) on heartbeat to prevent stale/duplicate hosts; simplify default worker IDs.
- Update docs, configs, and tests to match new layout.

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,12 @@ checkpoints
 data/
 rust/bearoff/target
 prometheus-3.8*
+tools/prometheus-*/
+tools/prometheus/
+tools/prometheus-data/
+tools/bgai_prometheus_targets.json
 bgai/endgame/gnubg*
-
+tools/grafana-11.3.0
 
 # C extensions
 *.so
