Grafana: allow UI updates and add MCTS temperature

--- a/tools/grafana-11.3.0/conf/provisioning/dashboards/bgai.yaml
+++ b/tools/grafana-11.3.0/conf/provisioning/dashboards/bgai.yaml
@@ -7,7 +7,7 @@ providers:
     disableDeletion: false
     editable: true
     updateIntervalSeconds: 30
-    allowUiUpdates: false
+    allowUiUpdates: true
     options:
       path: /home/sile/github/bgai/tools/dashboards
       foldersFromFilesStructure: false
