Add Pushgateway for Colab metrics

--- a/tools/prometheus_bgai.yml
+++ b/tools/prometheus_bgai.yml
@@ -15,3 +15,8 @@ scrape_configs:
   - files:
     - 'bgai_prometheus_targets.json'
     refresh_interval: 15s
+
+# Scrape Pushgateway (for workers that cannot be scraped, e.g. Colab)
+- job_name: 'pushgateway'
+  static_configs:
+  - targets: ['127.0.0.1:9091']
